--- a/index.html
+++ b/index.html
@@ -427,19 +427,6 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#approved-spenders" class="toc-h2 toc-link" data-title="approved-spenders">
-                      Approved Spenders
-                        <ul class="toc-list-h3">
-                            <li>
-                              <a href="#post-create-approval" class="toc-h3 toc-link" data-title="POST Create Approval">POST Create Approval</a>
-                            </li>
-                            <li>
-                              <a href="#post-execute-approval" class="toc-h3 toc-link" data-title="POST Execute Approval">POST Execute Approval</a>
-                            </li>
-                        </ul>
-                    </a>
-                  </li>
-                  <li>
                     <a href="#balances" class="toc-h2 toc-link" data-title="balances">
                       Balances
                         <ul class="toc-list-h3">
@@ -1799,8 +1786,8 @@ this can be done using the <a href="https://github.com/EOSIO/eosjs">eosjs</a> li
 <span class="kr">const</span> <span class="nx">Neon</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'@cityofzion/neon-js'</span><span class="p">)</span>
 <span class="kr">const</span> <span class="nx">parameterHexString</span> <span class="o">=</span> <span class="nx">Neon</span><span class="p">.</span><span class="nx">u</span><span class="p">.</span><span class="nx">str2hexstring</span><span class="p">(</span><span class="nx">parameterString</span><span class="p">)</span>
 
-<span class="c1">// 3. Zero pad (parameterHexString.length / 2) into a two digit hex string</span>
-<span class="kr">const</span> <span class="nx">lengthHex</span> <span class="o">=</span> <span class="p">(</span><span class="nx">parameterHexString</span><span class="p">.</span><span class="nx">length</span> <span class="o">/</span> <span class="mi">2</span><span class="p">).</span><span class="nx">toString</span><span class="p">(</span><span class="mi">16</span><span class="p">).</span><span class="nx">padStart</span><span class="p">(</span><span class="mi">2</span><span class="p">,</span> <span class="s1">'0'</span><span class="p">)</span>
+<span class="c1">// 3. Convert into a hex string that represents length of parameterString</span>
+<span class="kr">const</span> <span class="nx">lengthHex</span> <span class="o">=</span> <span class="nx">Neon</span><span class="p">.</span><span class="nx">u</span><span class="p">.</span><span class="nx">num2VarInt</span><span class="p">(</span><span class="nx">parameterHexString</span><span class="p">.</span><span class="nx">length</span> <span class="o">/</span> <span class="mi">2</span><span class="p">)</span>
 <span class="c1">// lengthHex: 37</span>
 
 <span class="c1">// 4. Concat lengthHex and parameterHexString</span>
@@ -1821,7 +1808,7 @@ parameter. This signature parameter should then be sent together with the other 
 
 <ol>
 <li>Convert the API parameters into a string, with parameters <strong>ordered alphanumerically</strong></li>
-<li>Serialize the parameter string into a hex string</li>
+<li>Serialize the parameter string into a hex string ()</li>
 <li>Zero pad the <strong>length / 2</strong> of the result from (2) into a two digit hex string</li>
 <li>Concat the result of (3) and (2)</li>
 <li>Wrap the result of (4) in a neo transaction</li>
@@ -1924,6 +1911,41 @@ f3831797cbd4244d1ccffafc42739e662e8b06c7a6f98efe5155d0eab1cf5c50fbac6d2a4c4487cb
   <span class="p">]</span>
 <span class="p">}</span>
 </code></pre>
+<blockquote>
+<p>Example request 2 (normalizing quantity key to amount)</p>
+</blockquote>
+<pre class="highlight javascript"><code><span class="p">{</span>
+  <span class="s2">"pair"</span><span class="p">:</span> <span class="s2">"SWTH_NEO"</span><span class="p">,</span>
+  <span class="s2">"contract_hash"</span><span class="p">:</span> <span class="s2">"eed0d2e14b0027f5f30ade45f2b23dc57dd54ad2"</span><span class="p">,</span>
+  <span class="s2">"normalize_keys"</span><span class="p">:</span> <span class="s2">"true"</span>
+<span class="p">}</span>
+</code></pre>
+<blockquote>
+<p>Example response 2 (normalize quantity key to amount)</p>
+</blockquote>
+<pre class="highlight javascript"><code><span class="p">{</span>
+  <span class="nl">asks</span><span class="p">:</span> <span class="p">[</span>
+    <span class="p">{</span>
+      <span class="s2">"price"</span><span class="p">:</span> <span class="s2">"0.00046103"</span><span class="p">,</span>
+      <span class="s2">"amount"</span><span class="p">:</span> <span class="s2">"9378.0"</span>
+    <span class="p">},</span>
+    <span class="p">{</span>
+      <span class="s2">"price"</span><span class="p">:</span> <span class="s2">"0.00046759"</span><span class="p">,</span>
+      <span class="s2">"amount"</span><span class="p">:</span> <span class="s2">"1084.30496802"</span>
+    <span class="p">}</span>
+  <span class="p">],</span>
+  <span class="nx">bids</span><span class="p">:</span> <span class="p">[</span>
+    <span class="p">{</span>
+    <span class="s2">"price"</span><span class="p">:</span> <span class="s2">"0.00045645"</span><span class="p">,</span>
+    <span class="s2">"amount"</span><span class="p">:</span> <span class="s2">"6678.0"</span>
+    <span class="p">},</span>
+    <span class="p">{</span>
+      <span class="s2">"price"</span><span class="p">:</span> <span class="s2">"0.0004534"</span><span class="p">,</span>
+      <span class="s2">"amount"</span><span class="p">:</span> <span class="s2">"12279.38328187"</span>
+    <span class="p">},</span>
+  <span class="p">]</span>
+<span class="p">}</span>
+</code></pre>
 <p>Retrieves the order book with formatted price and quantity.</p>
 <h4 id='http-request-14'>HTTP Request</h4>
 <p><code>GET /v2/offers/book</code></p>
@@ -1948,6 +1970,12 @@ f3831797cbd4244d1ccffafc42739e662e8b06c7a6f98efe5155d0eab1cf5c50fbac6d2a4c4487cb
 <td>no</td>
 <td>Only return offers for this <a href="#contracts">contract hash</a>.</td>
 </tr>
+<tr>
+<td>normalize_keys</td>
+<td><strong>string</strong></td>
+<td>no</td>
+<td>Normalize default &quot;quantity&quot; key to &quot;amount&quot;</td>
+</tr>
 </tbody></table>
 <h4 id='response-parameters-7'>Response parameters</h4>
 <table><thead>
@@ -1961,7 +1989,7 @@ f3831797cbd4244d1ccffafc42739e662e8b06c7a6f98efe5155d0eab1cf5c50fbac6d2a4c4487cb
 <td>Bid or Ask price.</td>
 </tr>
 <tr>
-<td>quantity</td>
+<td>quantity / amount</td>
 <td>If <code>bids</code> side, returns amount of tokens being bought. If <code>asks</code> side, returns amount of tokens that is being sold.</td>
 </tr>
 </tbody></table>
@@ -3221,9 +3249,8 @@ A successful order will have zero or one <strong>make</strong> and/or zero or mo
   IMPORTANT: After calling this endpoint, the Broadcast Order endpoint has to be called for the order to be executed.
 </aside>
 <h4 id='atomic-swap-orders'>Atomic Swap Orders</h4>
-<p>Atomic Swap orders can be created through this endpoint,
-the Atomic Swap contract needs to be approved if the offer_asset is on the ETH blockchain.
-Refer to the <a href="#approved-spenders">Approved Spenders</a> section for more information.</p>
+<p>Atomic Swap orders can be created through this endpoint.
+The <a href="#get-swap-pricing">swap pricing</a> endpoint can be used to determine the expected amount that will be received for a swap.</p>
 <h4 id='http-request-25'>HTTP Request</h4>
 <p><code>POST /v2/orders</code></p>
 <h4 id='request-parameters-17'>Request Parameters</h4>
@@ -3709,71 +3736,6 @@ a transaction in the response which must be signed.</p>
 
 <p>To compute the offer_hash, please take reference from the sample code snippet that is shown on the right.
   You can find the <code>u</code> library from <a href="https://github.com/CityOfZion/neon-js/tree/31600a3cb9c38b9a0d961e98475e4cc81c908cd8/packages/neon-core/src/u">neon-js</a>.</p>
-<h2 id='approved-spenders'>Approved Spenders</h2>
-<p>Switcheo Exchange is made up of a group of contracts.
-There is a main Broker contract that users deposits funds to,
-and there are sub-contracts that perform different functions to update user funds within the main Broker contract.</p>
-
-<p>For security, users have to send a transaction to approve a sub-contract before
-that sub-contract is allowed to update the user&#39;s funds within the main contract.</p>
-
-<p>The Atomic Swap contract is an example of such a sub-contract.
-To perform Atomic Swaps, users will have to first approve the Atomic Swap contract.</p>
-<h3 id='post-create-approval'>POST Create Approval</h3>
-<p>This is the first API call required to approve a spender.</p>
-<h4 id='http-request-29'>HTTP Request</h4>
-<p><code>POST /v2/approved_spenders</code></p>
-<h4 id='request-parameters-19'>Request Parameters</h4>
-<table><thead>
-<tr>
-<th>Parameter</th>
-<th>Type</th>
-<th>Required</th>
-<th>Description</th>
-</tr>
-</thead><tbody>
-<tr>
-<td>contract_hash</td>
-<td><strong>string</strong></td>
-<td>yes</td>
-<td>The contract hash of the <a href="#get-contracts">main contract</a>.</td>
-</tr>
-<tr>
-<td>address</td>
-<td><a href="#addresses">address</a></td>
-<td>yes</td>
-<td><a href="#addresses">Address</a> of the approver. <strong>Do not include this in the parameters to be signed.</strong></td>
-</tr>
-<tr>
-<td>spender_address</td>
-<td><strong>string</strong></td>
-<td>yes</td>
-<td>The address of the <a href="#get-atomic-swap-contracts">sub-contract</a> to be approved.</td>
-</tr>
-</tbody></table>
-<h3 id='post-execute-approval'>POST Execute Approval</h3>
-<p>This is the second endpoint required to execute an approval.
-After using the <a href="#post-create-approval">Create Approval</a> endpoint,
-you will receive a response which contains a <code>transaction</code>.</p>
-
-<p>The <code>transaction</code> in the response should be signed and directly broadcasted by the client,
-the transaction hash of the broadcasted transaction should then be sent to the broadcast endpoint.</p>
-<h4 id='http-request-30'>HTTP Request</h4>
-<p><code>POST /v2/approved_spenders/:id/broadcast</code></p>
-<h4 id='request-parameters-20'>Request Parameters</h4>
-<table><thead>
-<tr>
-<th>Parameter</th>
-<th>Type</th>
-<th>Description</th>
-</tr>
-</thead><tbody>
-<tr>
-<td>transaction_hash</td>
-<td><strong>string</strong></td>
-<td>The transaction hash of the broadcasted transaction</td>
-</tr>
-</tbody></table>
 <h2 id='balances'>Balances</h2>
 <p><strong>Description</strong></p>
 
@@ -3827,7 +3789,7 @@ their differences.</p>
 <td>Locked balances are balances that are withheld due to an open order and cannot be used to trade.</td>
 </tr>
 </tbody></table>
-<h4 id='http-request-31'>HTTP Request</h4>
+<h4 id='http-request-29'>HTTP Request</h4>
 <blockquote>
 <p>Example request:</p>
 </blockquote>
